examples/error-codes/undefined/UB-CCV5-bad.output
Error: UB-CCV5
Description: Casting empty value to type other than void.
Type: Undefined behavior.
See also: C11 sec. 6.3.2.2:1, J.2:1 item 23
  at f(UB-CCV5-bad.c:8)
  at main(UB-CCV5-bad.c:8)
  at <file-scope>(<unknown>)
Error: UB-CEE2
Description: Indeterminate value used in an expression.
Type: Undefined behavior.
See also: C11 sec. 6.2.4, 6.7.9, 6.8, J.2:1 item 11
  at main(UB-CCV5-bad.c:8)
  at <file-scope>(<unknown>)
